fix: add fenced code wrapping

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -45,6 +45,12 @@ iframe {
 
 .grid > * {
   grid-column: 1;
+  min-width: 0;
+}
+
+pre {
+  white-space: pre-wrap;
+  overflow-wrap: anywhere;
 }
 
 @media (width >= 768px) {
